--- a/static/question_list.css
+++ b/static/question_list.css
@@ -16,12 +16,10 @@
 .question-details {
   color: #666666;
   margin-bottom: 20px;
-  word-break: break-all;
 }
 
 .question-details > p {
   font-size: 34px;
-  word-break: break-all;
 }
 
 .timestamp {
